# cee-assistant

./: .gitignore  Dockerfile  README.md
cee-agent/: README.md  pyproject.toml
cee-agent/agent/: __init__.py  core.py  dialogue_manager.py  intent_classifier.py  memory.py
cee-agent/models/: __init__.py  schemas.py
cee-agent/tests/: test_agent.py  test_dialogue.py  test_intent.py  test_memory.py  test_schemas.py
cee-data-collector/: EXAMPLES.md  README.md  cli.py  data_generator.py  pyproject.toml
cee-data-collector/api/: main.py
cee-data-collector/core/: __init__.py  cache_manager.py  config.py  pipeline.py  scheduler.py  storage.py  user_preferences.py
cee-data-collector/models/: schemas.py
cee-data-collector/services/: analytics_service.py  recommendation_service.py  search_service.py
cee-data-collector/spiders/: __init__.py  async_spider.py  exam_board_spider.py  university_spider.py
cee-data-collector/tests/: __init__.py  test_config.py  test_exam_board_spider.py  test_pipeline.py  test_scheduler.py  test_services.py  test_storage.py  test_university_spider.py
cee-data-collector/utils/: backup_manager.py  comparator.py  data_loader.py  exporter.py  logger.py  monitor.py  visualizer.py
cee-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
cee-frontend/src/: App.tsx  index.css
cee-frontend/src/api/: client.ts
cee-frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx
cee-frontend/src/components/layout/: AppLayout.tsx  Footer.tsx  NavHeader.tsx
cee-frontend/src/components/recommendation/: ProbabilityBadge.tsx  RecommendationCard.tsx
cee-frontend/src/pages/: ChatPage.tsx  HomePage.tsx  LoginPage.tsx  RecommendationPage.tsx
cee-frontend/src/stores/: chatStore.ts  userStore.ts
cee-frontend/src/types/: chat.ts  recommendation.ts  user.ts
cee-recommendation/: README.md  pyproject.toml
cee-recommendation/core/: config.py
cee-recommendation/gateway/: __init__.py  main.py  router.py
cee-recommendation/models/: __init__.py  schemas.py
cee-recommendation/services/: collaborative_filter.py  deepseek_agent.py  result_merger.py  rule_engine.py
cee-recommendation/tests/: test_config.py
docs/superpowers/plans/: 2025-06-11-agent-consultation-layer.md  2025-06-11-ai-recommendation-engine.md  2025-06-11-data-collection-layer.md  2025-06-11-frontend-interaction-layer.md
docs/superpowers/specs/: 2025-06-11-agent-consultation-layer-design.md  2025-06-11-ai-recommendation-engine-design.md  2025-06-11-cee-data-collection-design.md  2025-06-11-frontend-interaction-layer-design.md
