[project]
name = "cee-agent"
version = "0.1.0"
description = "高考志愿填报智能咨询Agent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CEE Assistant Team"},
]
keywords = ["cee", "agent", "chatbot", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "models"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
